# POMC_LR_2

./: CMakeLists.txt  README.md  main.cpp
include/: mainwindow.h  taskOne.h  taskThree.h  taskTwo.h
include/widgets/: customnumberinput.h
src/: mainwindow.cpp  taskOne.cpp  taskThree.cpp  taskTwo.cpp
src/widgets/: customnumberinput.cpp
